Fixes word-wrap issues, fixes #164

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -138,7 +138,7 @@
 
         .message-content
         {
-            word-break: break-all;
+            word-break: normal;
             word-wrap: break-word;
         }
 
